# chatgpt-telegram-proxy

./: .env.openaiapi.example  .env.telegram.example  .gitignore  Makefile  README.md  pyproject.toml
oaiapi_teleproxy/: __init__.py  __main__.py  bot_with_openai.py
oaiapi_teleproxy/communicator/: __init__.py  communicator.py  message.py  queue.py
oaiapi_teleproxy/experiments/: __init__.py
oaiapi_teleproxy/experiments/aiogram/: bot.py
oaiapi_teleproxy/experiments/telethon/: bot.py
oaiapi_teleproxy/openai/: check.py  cli.py
oaiapi_teleproxy/telegram/: bot.py
oaiapi_teleproxy/telegram/experiments/: __init__.py
oaiapi_teleproxy/telegram/experiments/python_telegram_bot/: bot.py
oaiapi_teleproxy/telegram/experiments/telebot/: bot.py
oaiapi_teleproxy/telegram/experiments/telethon/: bot.py
openai_connect/: __init__.py  __main__.py  bot.py  exception.py  message.py
openai_connect/ai/: __init__.py  ai.py
openai_connect/ai/impl/: __init__.py
openai_connect/ai/impl/dummy/: ai.py
openai_connect/ai/impl/ugly_openai/: ai.py
openai_connect/messenger/: __init__.py  messenger.py
openai_connect/messenger/impl/: __init__.py
openai_connect/messenger/impl/cli/: __init__.py  messenger.py
openai_connect/messenger/impl/telegram/aiogram/: messenger.py
openai_connect/queue/: queue.py
openai_connect/queue/impl/: __init__.py  asyncio_queue.py
tests/unit/: const.py  test_message.py  test_queue.py
tests/unit/ai/: test_dummy.py
tests/unit/messenger/: test_cli.py
