[tool.black]
line-length = 79

[tool.isort]
line_length = 79
known_local_folder = []

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.poetry]
name = "chatgpt-telegram-proxy"
version = "0.0.1"
description = "..."
authors = ["sentenzo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
python-telegram-bot = "^20.8"
pytelegrambotapi = "^4.16.1"
aiogram = "^3.4.1"
telethon = "^1.34.0"
python-dotenv = "^1.0.1"
openai = "^1.12.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
pytest = "^8.0.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ["slow: marks test as slow (deselect with '-m \"not slow\"')"]
asyncio_mode = "auto"
